* --Fixed the infamous "framebuffer unsupported" on old NVIDIA drivers--  * SettingsDialog now saves and loads settings based on application title  * TestSceneWater water plane has been moved down so its below wildhouse